--- a/custom_components/ vacuum-styj02ym-ha/manifest.json
+++ b/custom_components/ vacuum-styj02ym-ha/manifest.json
@@ -3,9 +3,10 @@
   "name": "Xiaomi miio vacuum STYJ02YM",
   "documentation": "https://github.com/weslleycsil/vacuum-styj02ym-ha",
   "requirements": [
-    "construct==2.9.45",
-    "python-miio==0.5.3"
+    "construct==2.10.56",
+    "python-miio==0.5.5"
   ],
   "dependencies": [],
-  "codeowners": ["@weslleycsil"]
+  "codeowners": ["@nqkdev", "@weslleycsil", "@NickSchaepkens"],
+  "version": 0.2
 }
